--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 ###
 #   Database Settings
 ###
-# spring.datasource.url=jdbc:h2:mem:projetoSpring
-spring.datasource.url=jdbc:h2:file:./API-FrameI
-# spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:mem:projetoSpring
+#spring.datasource.url=jdbc:h2:file:./API-FrameI
+#spring.datasource.platform=h2
 spring.datasource.username = user
 spring.datasource.password =
 spring.datasource.driverClassName = org.h2.Driver
